--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.14.1",
         "@vitejs/plugin-react": "^4.0.3",
-        "@vitejs/plugin-react-refresh": "^1.3.6"
+        "@vitejs/plugin-react-refresh": "^1.3.6",
+        "react-router-dom": "^6.14.2"
     }
 }
