--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.1",
         "@mui/material": "^5.14.1",
         "@vitejs/plugin-react": "^4.0.3",
         "@vitejs/plugin-react-refresh": "^1.3.6",
