--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mui/material": "^5.14.1",
         "@vitejs/plugin-react": "^4.0.3",
         "@vitejs/plugin-react-refresh": "^1.3.6",
+        "react-loader-spinner": "^5.3.4",
         "react-router-dom": "^6.14.2"
     }
 }
